Setting up a few endpoints and cleaning up the project a bit.
